src/objects/zb__c.object
<CustomObject>
    <fields>
        <fullName>ClientName__c</fullName>
        <formula>OrderID__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>客户名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderAmount__c</fullName>
        <label>订单金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>订单号</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>本周回款情况</relationshipLabel>
        <relationshipName>OrderID</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overdue__c</fullName>
        <label>逾期金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ReturnedMoney__c</fullName>
        <label>回款额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Surplus__c</fullName>
        <label>剩余金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>本周回款情况</label>
    <nameField>
        <displayFormat>ZB-{00000000}</displayFormat>
        <label>周报编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>本周回款情况</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>